feat(group): [BH-198] implement generate, refresh, join group by link API